# passwordless-cognito

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/bazelrc/: README.md
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
auth-triggers/: ChallengeName.ts  ChallengeParam.ts  ChallengeType.ts  TriggerSource.ts  genKey.ts  handler.ts
cdk/: BUILD.bazel  ContextResolver.ts  package.json
cognito-stack/: BUILD.bazel  CognitoStack.ts  CognitoStackProps.ts  TriggerHandlerConstruct.ts  main.ts
esbuild/: BUILD.bazel  buildConfig.mjs  index.bzl
foo/: BUILD.bazel  a.ts
lambda-builder/: index.bzl  lambda_bundle.bzl
otp-auth-triggers-function/: AuthTriggerEvent.ts  BUILD.bazel  ChallengeParam.ts  ChallengeType.ts  CreateOTPChallenge.ts  DefineOTPChallenge.ts  EnvVar.ts  TriggerHandler.ts  VerifyOTPChallenge.ts  genOTP.ts  handler.ts
passwordless-cognito/.trunk/actions/trunk-single-player-auto-upgrade/: 2023-04-01-08-10-43.252.yaml
passwordless-cognito/.trunk/actions/trunk-upgrade-available/: 2023-04-01-08-10-43.7.yaml
typescript/: index.bzl  ts_project.bzl
zip/: BUILD.bazel  main.ts  zipFiles.ts
