load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

copy_to_bin(
  name = "package",
  srcs = ["package.json"],
)

lib_name = package_name()

deps = [
  "//:node_modules/@aws-cdk/core"
]

ts_project(
  name = lib_name + "_lib",
  srcs = glob(["*.ts"]),
  deps = deps,
  data = ["package"]
)

npm_package(
  name = lib_name,
  srcs = [lib_name + "_lib"],
  package = "@pl-cognito/" + lib_name,
)
