load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@npm//:aws-cdk/package_json.bzl", "bin")
load("//esbuild:index.bzl", "esbuild")

package(default_visibility = ["//visibility:public"])

lib_name = package_name()

deps = [
  "//:node_modules/@aws-cdk/core",
  "//:node_modules/@aws-cdk/aws-cognito",
  "//cdk"
]

esbuild(
  name = lib_name,
  entry_point = "main.ts",
  srcs = glob(["*.ts"]),
  deps = deps,
  platform = "node",
)

js_binary(
  name = "bin",
  data = [lib_name],
  entry_point = lib_name + ".js",
)

bin.cdk_binary(
  name = "deploy",
  data = ["bin"],
  args = [
    "--require-approval",
    "never",
    "--app",
    "./$(rootpath {})".format("bin"),
    "deploy",
  ]
)
