load("//esbuild:index.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

lib_name = package_name()

deps = [
  "//:node_modules/node-zip"
]

esbuild(
  name = lib_name,
  entry_point = "main.ts",
  srcs = glob(["*.ts"]),
  deps = deps,
  platform = "node",
)

js_binary(
  name = "bin",
  data = [lib_name],
  entry_point = lib_name + ".js",
)
